// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Basic Table 1`] = `
<div
  className="sc-ikZpkk eJTHLv"
  data-element="tableWrapper"
>
  <table
    className="sc-jIZahH faPsPV"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-iTONeN bLJTuS"
    >
      <tr>
        <td
          className="sc-cCsOjp sc-ciZhAO kbJusD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO hMiRBs khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Bigger Spacings 1`] = `
<div
  className="sc-ikZpkk eJTHLv"
  data-element="tableWrapper"
>
  <table
    className="sc-jIZahH faPsPV"
    data-element="table"
  >
    <caption>
      <div
        className="sc-iAvgwm cIuTqT"
      >
        Assets to deposit
      </div>
    </caption>
    <thead
      className="sc-iTONeN bLJTuS"
    >
      <tr>
        <td
          className="sc-cCsOjp sc-ciZhAO kbJusD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO hMiRBs khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Empty Data Table 1`] = `
<div
  className="sc-ikZpkk iwVvwM"
  data-element="tableWrapper"
>
  <table
    className="sc-jIZahH faPsPV"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-iTONeN bLJTuS"
    />
    <tbody>
      <tr>
        <td
          className="sc-cCsOjp cklhwy"
          colSpan={5}
        >
          <p
            className="sc-fEOsli dDFHem c-text--body-5"
          >
            There is no data loaded.
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Expandable table 1`] = `
<div
  className="sc-ikZpkk eJTHLv"
  data-element="tableWrapper"
>
  <table
    className="sc-jIZahH faPsPV"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-iTONeN bLJTuS"
    >
      <tr>
        <td
          className="sc-cCsOjp sc-ciZhAO kbJusD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO hMiRBs khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Borrow APY
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO UpnBa khSOJd"
          width={100}
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Action
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Small Spacing 1`] = `
<div
  className="sc-ikZpkk eJTHLv"
  data-element="tableWrapper"
>
  <table
    className="sc-jIZahH faPsPV"
    data-element="table"
  >
    <caption>
      <div
        className="sc-efBctP jCzSpC"
      >
        <div>
          Your deposit
        </div>
      </div>
    </caption>
    <thead
      className="sc-iTONeN bLJTuS"
    >
      <tr>
        <td
          className="sc-cCsOjp sc-ciZhAO kbJusD czcZGE"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD czcZGE"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD czcZGE"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD czcZGE"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO hMiRBs czcZGE"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-cCsOjp kbJusD"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hMiRBs"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp kbJusD"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hMiRBs"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp kbJusD"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hMiRBs"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp kbJusD"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp dLbbcD"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hMiRBs"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table With Footer 1`] = `
<div
  className="sc-ikZpkk eJTHLv"
  data-element="tableWrapper"
>
  <table
    className="sc-jIZahH faPsPV"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-iTONeN bLJTuS"
    >
      <tr>
        <td
          className="sc-cCsOjp sc-ciZhAO kbJusD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO dLbbcD khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-cCsOjp sc-ciZhAO hMiRBs khSOJd"
        >
          <div
            className="sc-himrzO sc-gXmSlM ikUWxf joWRCg"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-cCsOjp dAoAAe"
        >
          <div
            className="sc-ckMVTt hqsprI"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-cCsOjp LkLuC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-cCsOjp hPqCTt"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      className="sc-cTQhss bGgAsT c-table__footer"
    >
      <tr>
        <td
          className="sc-cCsOjp dLbbcD"
          colSpan={5}
        >
          <div>
            Footer component
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
